LTA-42 THEIA-117 updated wrapper recipes to use jenkins-liatrio, updated .kitchen.yml to match Vagrant run list

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -12,6 +12,7 @@ suites:
     run_list:
       - recipe[yum-epel::default]
       - recipe[jenkins-as-code::default]
+      - recipe[jenkins-as-code::create_jobs]
     attributes:
       java:
         jdk_version: "8"
