LIAT-69 disabled RequireParentheses cop, require vagrant-berkshelf and install if its not present, comment out firewall cmds as bento does not run firewalld

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -2,13 +2,17 @@
 driver:
   name: docker
   use_sudo: false
+  require_chef_omnibus: 12.16.42
+
+  # XXX consider adding a docker container with chef-client already installed
+  # require_chef_omnibus: false
+  # provision_command: curl -L https://www.opscode.com/chef/install.sh | bash
 
 platforms:
   - name: centos-6.8
 
 suites:
-  - name: hygieia-liatrio
-    encrypted_data_bag_secret_key_path: "test/integration/default/encrypted_data_bag_secret"
+  - name: jenkins-liatrio
     run_list:
       - recipe[yum-epel::default]
       - recipe[jenkins-as-code::default]
